--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="text" name="password" placeholder="请输入密码">
         <button class="btn">登录</button>
     </div>
+    <div>master分支修改了index.html</div>
     <script src="./js/index.js"></script>
 </body>
 </html>
