创建css并编写样式

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>登录功能</h1>
-    <div>
+    <div class="login">
         <input type="text" name="username" placeholder="请输入用户名">
         <input type="text" name="password" placeholder="请输入密码">
         <button class="btn">登录</button>
