注册页面逻辑

--- a/register.html
+++ b/register.html
@@ -10,7 +10,9 @@
             background-color: yellow;
         }
     </style>
-    
+    <script>
+        alert(1)
+    </script>
 </head>
 <body>
     <h1>注册页面</h1>
